htmlの作成のメソッドをyamlで書いて指定できるように

--- a/pebble/app/src/main/resources/config.yaml
+++ b/pebble/app/src/main/resources/config.yaml
@@ -39,3 +39,14 @@ qualification:
   - 普通自動車第一種運転免許（AT限定）
   - 第二種電気工事士
   - Silver SE 17
+
+htmlCreator:
+  - !!gutugutu3030.config.html_creator.IndexHtmlCreator
+    path: index.pebl
+  - !!gutugutu3030.config.html_creator.ProfileHtmlCreator
+    path: profile.pebl
+  - !!gutugutu3030.config.html_creator.RootHtmlCreator
+    path: root/
+  - !!gutugutu3030.config.html_creator.ContentsHtmlCreator
+    path: contents/
+  
