--- a/pebble/app/src/main/resources/config.yaml
+++ b/pebble/app/src/main/resources/config.yaml
@@ -24,16 +24,16 @@ contents:
   - {directory: reallive2d, name: MultiplaneGirl, date: 2018/6-2022 }
 
 career:
-  - {description: "2012/4     明治大学理工学部情報科学科入学"}
-  - {description: "2015/7     玉木研所属"}
-  - {description: "2016/3     明治大学理工学部情報科学科卒業"}
-  - {description: "2016/4     明治大学大学院理工学研究科新領域創造専攻入学（宮下研）"}
-  - {description: "2017/7/24  Zing!にて「3Dプリンタで“声の立体化”に挑戦!?」記事掲載", url: "http://eonet.jp/zing/articles/_4100703.html"}
-  - {description: "2017/9/6   新たな技術を福祉にいかす体験ワークショップにて研究事例紹介", url: "http://goodjobcenter.com/topics/report/959/"}
-  - {description: "2017/9/22  Zing!にてまるでハンドパワー！「手をかざすと動く台」をFabってみた」記事掲載", url: "http://eonet.jp/zing/articles/_4101119.html"}
-  - {description: "2018/3     明治大学大学院理工学研究科新領域創造専攻卒業・工学（修士）取得"}
-  - {description: "2018/4     チームラボ株式会社入社"}
-  - {description: "2022       インタラクティブシステムとソフトウェアに関するワークショップ(WISS)にてプログラム委員に就任", url: "https://www.wiss.org/"}
+  - {date: 2012/4, description: "明治大学理工学部情報科学科入学"}
+  - {date: 2015/7, description: "玉木研所属"}
+  - {date: 2016/3, description: "明治大学理工学部情報科学科卒業"}
+  - {date: 2016/4, description: "明治大学大学院理工学研究科新領域創造専攻入学（宮下研）"}
+  - {date: 2017/7/24, description: "Zing!にて「3Dプリンタで“声の立体化”に挑戦!?」記事掲載", url: "http://eonet.jp/zing/articles/_4100703.html"}
+  - {date: 2017/9/6, description: "新たな技術を福祉にいかす体験ワークショップにて研究事例紹介", url: "http://goodjobcenter.com/topics/report/959/"}
+  - {date: 2017/9/22, description: "Zing!にてまるでハンドパワー！「手をかざすと動く台」をFabってみた」記事掲載", url: "http://eonet.jp/zing/articles/_4101119.html"}
+  - {date: 2018/3, description: "明治大学大学院理工学研究科新領域創造専攻卒業・工学（修士）取得"}
+  - {date: 2018/4, description: "チームラボ株式会社入社"}
+  - {date: 2022~, description: "インタラクティブシステムとソフトウェアに関するワークショップ(WISS)にてプログラム委員に就任", url: "https://www.wiss.org/"}
 
 qualification:
   - 普通自動車第一種運転免許（AT限定）
