--- a/pebble/app/src/main/resources/config.yaml
+++ b/pebble/app/src/main/resources/config.yaml
@@ -49,4 +49,8 @@ htmlCreator:
     path: root/
   - !!gutugutu3030.config.html_creator.ContentsHtmlCreator
     path: contents/
+  - !!gutugutu3030.config.html_creator.StarHtmlCreator
+    path: star.pebl
+    thumbnailImagePath: star/1024/
+    fullsizeImagePath: star/full/
   
