マージンの変更、装画の挿入

--- a/pebble/app/src/main/resources/config.yaml
+++ b/pebble/app/src/main/resources/config.yaml
@@ -55,4 +55,5 @@ htmlCreator:
     fullsizeImagePath: star/full/
     video:
       "2023-07-22,ホーリーグレイル　習作.jpg" : "https://www.youtube.com/embed/1YQO81ByZ8k"
+      "2022-12-13,はやま湖.jpg" : "https://www.youtube.com/embed/kqlHLPIOVQE"
   
