--- a/pebble/app/src/main/resources/config.yaml
+++ b/pebble/app/src/main/resources/config.yaml
@@ -56,4 +56,5 @@ htmlCreator:
     video:
       "2023-07-22,ホーリーグレイル　習作.jpg" : "https://www.youtube.com/embed/1YQO81ByZ8k"
       "2022-12-13,はやま湖.jpg" : "https://www.youtube.com/embed/kqlHLPIOVQE"
+      "2024-01-01,常しえの夜空.jpg" : "https://www.youtube.com/embed/vp9j_aEFtkw"
   
