星空動画を追加

--- a/pebble/app/src/main/resources/config.yaml
+++ b/pebble/app/src/main/resources/config.yaml
@@ -54,7 +54,9 @@ htmlCreator:
     thumbnailImagePath: star/small/
     fullsizeImagePath: star/full/
     video:
-      "2023-07-22,ホーリーグレイル　習作.jpg" : "https://www.youtube.com/embed/1YQO81ByZ8k"
-      "2022-12-13,はやま湖.jpg" : "https://www.youtube.com/embed/kqlHLPIOVQE"
-      "2024-01-01,常しえの夜空.jpg" : "https://www.youtube.com/embed/vp9j_aEFtkw"
+      "2023-07-22,ホーリーグレイル　習作.jpg" : https://www.youtube.com/embed/1YQO81ByZ8k
+      "2022-11-19,橋.png" : https://www.youtube.com/embed/KbsJ2VCJLYI
+      "2022-10-30,鐘.png" : https://www.youtube.com/embed/s_ZBwD6ztlA
+      "2022-12-13,はやま湖.jpg" : https://www.youtube.com/embed/kqlHLPIOVQE
+      "2024-01-01,常しえの夜空.jpg" : https://www.youtube.com/embed/vp9j_aEFtkw
   
