とりあえず最終学歴卒業証明のリンクを追加

--- a/pebble/app/src/main/resources/config.yaml
+++ b/pebble/app/src/main/resources/config.yaml
@@ -31,7 +31,7 @@ career:
   - {date: 2017/7/24, description: "Zing!にて「3Dプリンタで“声の立体化”に挑戦!?」記事掲載", url: "http://eonet.jp/zing/articles/_4100703.html"}
   - {date: 2017/9/6, description: "新たな技術を福祉にいかす体験ワークショップにて研究事例紹介", url: "http://goodjobcenter.com/topics/report/959/"}
   - {date: 2017/9/22, description: "Zing!にてまるでハンドパワー！「手をかざすと動く台」をFabってみた」記事掲載", url: "http://eonet.jp/zing/articles/_4101119.html"}
-  - {date: 2018/3, description: "明治大学大学院理工学研究科新領域創造専攻卒業・工学（修士）取得"}
+  - {date: 2018/3, description: "明治大学大学院理工学研究科新領域創造専攻卒業・工学（修士）取得", url: "./pdf/CertificateOfGraduation.pdf"}
   - {date: 2018/4, description: "チームラボ株式会社入社"}
   - {date: 2022~, description: "インタラクティブシステムとソフトウェアに関するワークショップ(WISS)にてプログラム委員に就任", url: "https://www.wiss.org/"}
 
