--- a/portfolio/src/jsMain/resources/contents/reallive2d/data.yaml
+++ b/portfolio/src/jsMain/resources/contents/reallive2d/data.yaml
@@ -1,3 +1,9 @@
+title: MultiplaneGirl
+subTitle: 絵に命を吹き込む手法
+notice:
+  message: 組み立てに使用した3Dモデルデータ、プログラム、設計用システムがダウンロードできます
+  buttonUrl: https://github.com/gutugutu3030/realLive2d
+  buttonName: ダウンロード
 contents:
   - type: col
     column:
