--- a/portfolio/src/jsMain/resources/contents/reallive2d/data.yaml
+++ b/portfolio/src/jsMain/resources/contents/reallive2d/data.yaml
@@ -15,5 +15,24 @@ contents:
           - キャラクタが指を指した方向を向いたようにみえるシステムを作成した．
           -  絵をPCなどで描く時，パーツごとにレイヤを分ける場合がある．本システムはそのレイヤをアクリル板に分けて重ねて配置した．更にそれぞれのレイヤを独立上下左右に平行移動させることによって絵に立体感をもたせることに成功した．
           -  同様の手法を用いたものとして，セルアニメーションのマルチプレーンカメラ [1]や，ソフトウェア上ではLive2D [2]などが挙げられる．
+  - type: col
+    column:
+      - type: p
+        title: 簡単な解説
+        text:
+          - アクリル板を約7mm感覚で配置している．前髪，目（の枠）・口，瞳，顔の輪郭にわけてアクリル板にホワイトボードマーカーで描きこんでおり，これにより立体感を出している．
+          - 一つのレイヤ（アクリル板）につき4つのサーボモータで平行移動を担っている．左右にそれぞれ1つの，下に2つのサーボモータを設置している．
+      - type: image
+        src: ./servo.png
+        caption: サーボモータの動き
+  - type: p
+    title: 制作方法
+    text:
+      - 正直著者が時間短縮のため（嘘　サボって）まともに設計しなかったため，使用した素材や画像を紹介するに留める．設計図のようなものは上記Githubに上がっているrealLive2DSimulatorを起動していただきたい
+      - 基本的にはサーボの取り付け部分にプラ棒をアロンアルファでくっつける，のを層によってずらしていくだけである．
+  - type: youtube
+    title: その他動画デモ
+    url: https://www.youtube.com/embed/CujnVfHNu5g
+
 
 
