--- a/portfolio/src/jsMain/resources/contents/reallive2d/data.yaml
+++ b/portfolio/src/jsMain/resources/contents/reallive2d/data.yaml
@@ -36,12 +36,12 @@ contents:
       - 商品名
       - 説明
     rows:
-      - - "プラ材 5mm角棒(http://www.tamiya.com/japan/products/70131/index.html)"
+      - - "プラ材 [5mm角棒](http://www.tamiya.com/japan/products/70131/index.html)"
         - "フレームとして使用．2セット使った記憶があり．"
       - - SG90
         - サーボモータとして使用。16個使用
       - - Ｉ２Ｃ接続１６チャンネル　サーボ＆ＰＷＭ駆動キットＩ２Ｃ接続１６チャンネル　サーボ＆ＰＷＭ駆動キット
-        - PCA9685。秋月電子(https://akizukidenshi.com)で購入可能
+        - PCA9685。[秋月電子](https://akizukidenshi.com)で購入可能
       - - アクリル板
         - 4枚。大きさはsimulatorのmeasure参照。
   - type: youtube
