--- a/portfolio/src/jsMain/resources/star.yaml
+++ b/portfolio/src/jsMain/resources/star.yaml
@@ -55,4 +55,4 @@ contents:
   - file: やざわの名は,IMGP8742.jpg
   - file: IMGP8458.jpg
   - file: IMGP8451.jpg
-  - file: 2017ふたご座流星群流星群.jpg
+  - file: ふたご座流星群流星群.jpg
