更にgit ignoreを修正

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,8 @@
 .DS_Store
 
 .*/
-build/
+/build/*
 !/build/dist/
-!/build/dist/js/
-!/build/dist/js/productionExecutable/
-!/build/dist/js/productionExecutable/**
 out/
 *.imp
 *.ipr
