--- a/profile.yaml
+++ b/profile.yaml
@@ -9,12 +9,20 @@ career:
   - {date: 2015/7, description: "玉木研所属"}
   - {date: 2016/3, description: "明治大学理工学部情報科学科卒業"}
   - {date: 2016/4, description: "明治大学大学院理工学研究科新領域創造専攻入学（宮下研）"}
-  - {date: 2017/7/24, description: "Zing!にて「3Dプリンタで“声の立体化”に挑戦!?」記事掲載", url: "http://eonet.jp/zing/articles/_4100703.html"}
-  - {date: 2017/9/6, description: "新たな技術を福祉にいかす体験ワークショップにて研究事例紹介", url: "http://goodjobcenter.com/topics/report/959/"}
-  - {date: 2017/9/22, description: "Zing!にてまるでハンドパワー！「手をかざすと動く台」をFabってみた」記事掲載", url: "http://eonet.jp/zing/articles/_4101119.html"}
-  - {date: 2018/3, description: "明治大学大学院理工学研究科新領域創造専攻卒業・工学（修士）取得", url: "./pdf/CertificateOfGraduation.pdf"}
+  - {date: 2017/7/24, description: "Zing!にて「3Dプリンタで“声の立体化”に挑戦!?」記事掲載", url: [ "http://eonet.jp/zing/articles/_4100703.html" ] }
+  - {date: 2017/9/6, description: "新たな技術を福祉にいかす体験ワークショップにて研究事例紹介", url: [ "http://goodjobcenter.com/topics/report/959/" ] }
+  - {date: 2017/9/22, description: "Zing!にてまるでハンドパワー！「手をかざすと動く台」をFabってみた」記事掲載", url: [ "http://eonet.jp/zing/articles/_4101119.html" ]}
+  - {date: 2018/3, description: "明治大学大学院理工学研究科新領域創造専攻卒業・工学（修士）取得", url: [ "./pdf/CertificateOfGraduation.pdf" ] }
   - {date: 2018/4, description: "チームラボ株式会社入社"}
-  - {date: 2022~, description: "インタラクティブシステムとソフトウェアに関するワークショップ(WISS)にてプログラム委員に就任", url: "https://www.wiss.org/"}
+  - date: 2018
+    description: 国内アート展示4件、海外アート案件1件に参加
+  - date: 2022~
+    description: "インタラクティブシステムとソフトウェアに関するワークショップ(WISS)にてプログラム委員に就任"
+    url:
+      - https://www.wiss.org/WISS2022/committee.html
+      - https://www.wiss.org/WISS2023/committee.html
+      - https://www.wiss.org/WISS2024/committee.html
+      - https://www.wiss.org/WISS2025/committee.html
 qualification:
   - { description: 普通自動車第一種運転免許（AT限定）}
   - { description: 第二種電気工事士 }
@@ -26,13 +34,16 @@ award:
   - date: 2016/9/17
     description: >-
       二回　3D Printer Digging Festival プラチナ賞 「コピー機並みに使いやすい3Dプリンターの販売アイデア」
-    url: http://ictco.jp/syousai.html?id=137
+    url:
+      - http://ictco.jp/syousai.html?id=137
   - date: 2017/3/17
     description: 第１回みたかFabコンテスト 発展賞 「ミニミニ映写機」
-    url: https://fabmitaka.co/docs/2017030600016/
+    url:
+      - https://fabmitaka.co/docs/2017030600016/
   - date: 2018
     description: 第176回ヒューマンコンピュータインタラクション研究会 学生奨励賞 「3DPrinCar：行き先に応じた物品を推薦・提供する乗用車」
-    url: http://www.meiji.ac.jp/ams/info/6t5h7p00000qa5i3.html
+    url:
+      - http://www.meiji.ac.jp/ams/info/6t5h7p00000qa5i3.html
 hobbyDocument:
   - { path: "pdf/hobby/映写機・フィルム.pdf", title: "映写機・フィルムについての資料" }
 publication:
@@ -48,10 +59,14 @@ publication:
          Yoh Akiyama and Homei Miyashita. Electronic kit with no current flow that uses projection mapping.
          CHI '14 Extended Abstracts on Human Factors in Computing Systems(CHI2014), pp.155-156, 2014.
       pdf: http://dl.acm.org/citation.cfm?id=2559206.2579523&coll=DL&dl=ACM
+      notice:
+        - Acceptance rate:37%
     - description: >-
          Yoh Akiyama and Homei Miyashita. Projectron Mapping: The Exercise and Extension of Augmented Workspaces for Learning Electronic Modeling through Projection Mapping. Proceedings of the adjunct publication of the 27th annual ACM symposium on User interface software and technology(UIST2014), pp.57-58, 2014.
       pdf: http://dl.acm.org/citation.cfm?id=2658779.2659113&coll=DL&dl=ACM
-      notice: SUI2014で招待デモ発表
+      notice:
+        - SUI2014で招待デモ発表
+        - Acceptance rate:50%
     - description: >-
          Yoh Akiyama and Homei Miyashita. Fitter: A System for Easily Printing Objects that Fit Real Objects.
          Proceedings of the adjunct publication of the 29th annual ACM symposium on User interface software and technology(UIST2016), pp.129-131, 2016.
@@ -68,12 +83,15 @@ publication:
         Vol.2018-HCI-176，Issue.6，No.12，2018．
       pdf: https://ipsj.ixsq.nii.ac.jp/ej/?action=pages_view_main&active_action=repository_view_main_item_detail&item_id=185427&item_no=1&page_id=13&block_id=8https://ipsj.ixsq.nii.ac.jp/ej/?action=pages_view_main&active_action=repository_view_main_item_detail&item_id=185427&item_no=1&page_id=13&block_id=8
       video: https://www.youtube.com/watch?v=jG5BceMWTeU
+      notice:
+        - 学生奨励賞受賞
   国内会議（査読無しデモ・ポスター発表）:
     - description: >-
         秋山耀, 宮下芳明. 部品へのプロジェクションマッピングによる通電しない電子工作.
         第21回インタラクティブシステムとソフトウェアに関するワークショップ論文集(WISS2013), pp.141-142, 2013.
       pdf: http://www.wiss.org/WISS2013Proceedings/demo/089.pdf
-      notice: 対話発表賞
+      notice:
+        - 対話発表賞
     - description: >-
         加藤邦拓, 秋山耀, 宮下芳明. タッチ入力の柔軟な再配置を可能としたインタフェースの作成支援.
         第22回インタラクティブシステムとソフトウェアに関するワークショップ論文集(WISS2014), pp.151-152, 2014.
