deploy: e1235478a4ec4f225653e43a00e22ad57210e83b

--- a/content_list.yaml
+++ b/content_list.yaml
@@ -6,7 +6,7 @@ contents:
   - {directory: contents/duelDisk, name: デュエルディスク, date: 2013/5}
   - {directory: contents/ProjectronMapping, name: Projectron Mapping, date: 2013/10-2014/12,
       thumbnailExp: jpg}
-  - {directory: contents/numericKeypad, name: オリジナルテンキー, date: 2014/3, url: "https://sites.google.com/view/gutugutu3030/other/tenkiwojietishitegaizaosuru", thumbnailExp: jpg }
+  - {directory: contents/numericKeypad, name: オリジナルテンキー, date: 2014/3, thumbnailExp: jpg }
   - {directory: contents/somen, name: 流しそうめん音ゲー, date: 2014/9,
       thumbnailExp: jpg }
   - {directory: contents/realtimeProcessing, name: Processing RealtimeMode, date: 2015/3,
@@ -29,7 +29,7 @@ contents:
   - {directory: contents/PaperBattler, name: Paper Battler, date: 2017/1, url: "https://youtu.be/eRLvTMQ5Emc" }
   - { directory: contents/8mmFilm/projector, name: ミニミニ8mm映写機, date: 2017/1 }
   - {directory: contents/Theater, name: Theater, date: 2017/1-2017/2 }
-  - {directory: contents/mobileFabrication, name: 背負型3Dプリンタ, date: 2017/3-2018/3, url: "https://sites.google.com/view/gutugutu3030/quanku-guan-xinai/3dpurintawobeifuttehuajianshitahua", thumbnailExp: jpg }
+  - {directory: contents/mobileFabrication, name: 背負型3Dプリンタ, date: 2017/3-2018/3,  thumbnailExp: jpg }
   - {directory: contents/8mmFilm/game, name: ICレスゲーム機, date: 2017/9,
       thumbnailExp: png }
   - {directory: contents/3DPrinCar, name: 3DPrinCar, date: 2017/5-2018/1 }
